# shmocky

./: .gitignore  .repomixignore  AGENTS.md  PLANS.md  README.md  biome.json  pyproject.toml  repomix-shmocky.md  repomix.config.json  shmocky.toml
apps/web/: README.md  components.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/web/src/: app.html
apps/web/src/lib/: types.ts
apps/web/src/lib/components/ui/button/: button.svelte  index.ts
apps/web/src/lib/components/ui/textarea/: textarea.svelte
apps/web/src/routes/: +page.svelte  layout.css
docs/: hedgeknight.md  ideas.md  v2-design.md
plans/: 001-browser-mirror.md  002-oracle-agent.md  003-workflow-supervisor.md  004-managed-worktree-execution.md  005-builder-judge-contracts.md  006-notebook-projection.md
scripts/: run-backend.sh  run-frontend.sh
src/shmocky/: __init__.py  bridge.py  event_store.py  main.py  models.py  notebook_models.py  notebook_projection.py  notebook_renderer.py  notebook_store.py  oracle_agent.py  projection.py  settings.py  supervisor.py  workflow_config.py
tests/: test_bridge.py  test_notebook_projection.py  test_oracle_agent.py  test_projection.py  test_supervisor.py  test_workflow_config.py
